--- a/app/components/results-view.module.css
+++ b/app/components/results-view.module.css
@@ -1,8 +1,9 @@
 .container {
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: min-content auto min-content;
   gap: 1rem;
   width: 100%;
+  height: 100%;
 }
 
 .container h2 {
@@ -12,30 +13,39 @@
 .actions {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
+  gap: 0.5rem;
 }
 
 .guesses {
-  padding: 0 0 0 1em;
-  max-height: 25vh;
+  padding: 0;
+  margin: 0;
   overflow-y: auto;
+  position: relative;
 }
+
 .guesses li {
   font-size: var(--font-size-l);
   display: flex;
   margin: 0;
   padding: 0;
   justify-content: space-between;
-  line-height: 2;
+  line-height: 3;
   position: relative;
+
+  font-family: "Courier New", "Courier", monospace;
+  font-weight: 700;
 }
 
-.guesses li::before {
-  content: "-";
+.guesses li:not(:first-of-type)::after {
+  content: "";
   position: absolute;
-  left: -1rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--color-text);
+  opacity: 0.2;
 }
-
 .guesses li a {
   text-decoration: none;
 }
