--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,7 +2,6 @@
   position: absolute;
   inset: 0.5rem;
   display: flex;
-  justify-items: center;
   justify-content: center;
 }
 
@@ -10,22 +9,27 @@
   padding: 0 1rem 1rem;
   max-width: 30rem;
   width: 100%;
-  display: flex;
+  height: 100%;
   gap: 1rem;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: min-content auto min-content;
   border: 2px solid;
   box-shadow: 4px 4px 0 var(--color-text);
-  overflow: hidden;
   background-color: var(--color-bg);
 }
 
 .header {
+  overflow: hidden;
 }
 
 .main {
-  flex: 1;
+  grid-row: 2;
+  margin-inline: -1rem;
+  padding: 1rem;
+  overflow-y: auto;
   display: flex;
-  place-items: center;
+  align-items: center;
+  justify-content: center;
 }
 .footer {
   padding: 0.5rem 0 0;
